refactor: 전체 프로젝트 리팩토링